# FroboMind

fmApp/frobolab/frobit_v1_demo/launch/: sim_remote_keyboard.launch
fmApp/sdu/archive/sdu_armadillo4_abtest/: CMakeLists.txt  package.xml
fmApp/sdu/group6/rqt_mypkg/fmApp/sdu/sdu_rsd14_group6/: CMakeLists.txt  package.xml
fmApp/sdu/ishan_rsd_rqtplugin_ui/: CMakeLists.txt  package.xml  plugin.xml  setup.py
fmApp/sdu/rqt_mypkg/: CMakeLists.txt
fmApp/sdu/sdu_armadillo3_remote/: CMakeLists.txt  package.xml
fmApp/sdu/sdu_armadillo3_row_weeder/: CMakeLists.txt  package.xml
fmApp/sdu/sdu_armadillo3_test/: CMakeLists.txt  package.xml
fmApp/sdu/sdu_armadillo4_2014-10-14/: CMakeLists.txt  package.xml  setup.py
fmApp/sdu/sdu_armadillo4_remote/: CMakeLists.txt  package.xml
fmApp/sdu/sdu_frobit_tracker/: CMakeLists.txt  package.xml
fmApp/sdu/sdu_pichi_remote/: CMakeLists.txt  package.xml
fmApp/sdu/sdu_udev_rules/: 90-sdu-frobitpro-4.rules  90-sdu-vectornav-2.rules  90-sdu-vectornav-3.rules  rsd-group6.rules
fmControllers/platform/roboteq_hbl1650/: CMakeLists.txt
fmDecisionMakers/behaviours/generic_smach/: CMakeLists.txt  package.xml
fmLib/hmi_support/gamepad_interface/: CMakeLists.txt  package.xml  setup.py
fmLib/hmi_support/keyboard_interface/: CMakeLists.txt  package.xml
fmLib/hmi_support/wii_interface/: CMakeLists.txt  package.xml
fmLib/kinematics/differential_ifk_lib/: CMakeLists.txt  package.xml
fmLib/math/simple_2d_math/: CMakeLists.txt  package.xml
fmLib/msg_converters/odometry_to_pose_stamped/: CMakeLists.txt  package.xml  setup.py
(+117 files in other folders)
